--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,6 @@ body {
 
 #control {
     text-align: center;
-    background: silver;
 }
 
 #wrapper2 {
@@ -25,7 +24,7 @@ body {
     overflow:auto;
 }
 #suras .active {
-    background:navy;
+    background:#3f51b5;;
     color:white;
 }
 #suras .active a {
@@ -55,12 +54,44 @@ body {
     position:absolute;
 }
 
+   
 #tafseer {
     position: absolute;
+     font-family: 'Lateef', cursive;
+    font-size: 20px;
     top:15px;
     right:520px;
     height:430px;
     width:290px;
     background: #f8f8f8;
     overflow:auto;
+}
+
+a {
+    color: #ff4081; }
+
+span#page_num {
+    color: white;
+}
+
+table {
+    table-layout: fixed;
+   
+}
+span#page_num {
+    color: #444;
+}
+
+
+
+td, th {
+    /* padding: 15px 5px; */
+    display: table-cell;
+    text-align: left;
+    padding: 0px;
+    vertical-align: middle;
+    border-radius: 2px;
+}
+body {
+    font-family: 'Amiri', serif; 
 }
